== 26/Aug/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b85.zip V1.6-b85]   [attachment:wiki:SoftwareReleases:eLife-1.6b85-libs.zip Libs-V1.6b85] ==

''' Flash Client '''

Ensure cross domain file is sent when requested to support newer flash player versions. Resolves issue [ticket:731],[ticket:734],[ticket:731]

''' User Manager '''

Ensure user manager redirects correctly on authentication. Resolves issue [ticket:735]
To use their must be a subdirectory /UserManager created in the eLife website. Contents are index.html, login.html, login_fail.html. 
Examples have been checked into the Client_Build/web project.

== 3/Jun/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b84.zip V1.6-b84]  ==

''' Jetty '''

Ensure any time an INIT is received from a client, re send startup macros etc. Helps to better handle user reloading the web  page.

Change session counting to not add a new session count if the user is already logged in; instead invalidate the first session.

Implemented form based authentication. A login.html and login_fail.html file must be added to the to level web server root.  Resolves issue [ticket:728]

''' User Manager '''

The user manager URL has changed to /UserManager/Users.
A logout function has been added to the user manager.
For authentication the user manager requires two files, login_UserMgr.html and login_fail_UserMgr.html to be in the top level of the web server. 
Their format is similar to the login.html and login_fail.html files (a sample has been provided in the client_build/standalone SVN path)

== 29/Apr/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b83.zip V1.6-b83]  ==

''' Groovy models '''

Added a method to unit test groovy models.. See groovy model documentation for details. Implements [ticket:718]

''' Security '''

Improved counter of active sessions.

''' Multimedia '''

Improved compatability between Track lists , album lists etc. and web clients.
