@@ -12,6 +12,9 @@
 <library name="Groovy1.5.1" systemlibrary="false">
 <archive path="/Java/groovy-1.5.1/embeddable/groovy-all-1.5.1.jar"/>
 </library>
+<library name="Groovy1.5.6" systemlibrary="false">
+<archive javadoc="file:/Java/groovy-1.5.6/html/gapi/" path="/Java/groovy-1.5.6/embeddable/groovy-all-1.5.6.jar"/>
+</library>
 <library name="JDom1.0" systemlibrary="false">
 <archive javadoc="file:/Java/jdom-1.0/build/apidocs/" path="/Java/jdom-1.0/build/jdom.jar" source="/Java/jdom-1.0/src/java"/>
 <archive path="/Java/jdom-1.0/lib/xml-apis.jar"/>
@@ -34,6 +37,18 @@
 <archive path="/Java/jetty-6.1.0/lib/ext/jetty-html-6.1.0.jar"/>
 <archive path="/Java/jetty-6.1.0/lib/ext/jetty-ajp-6.1.0.jar"/>
 <archive path="/Java/jetty-6.1.0/lib/ext/jetty-sslengine-6.1.0.jar"/>
+</library>
+<library name="Jetty6.1.11" systemlibrary="false">
+<archive path="/Java/jetty-6.1.11/lib/jetty-6.1.11.jar" source="/Java/jetty-6.1.11/modules/jetty/src/main/java"/>
+<archive path="/Java/jetty-6.1.11/lib/jetty-util-6.1.11.jar"/>
+<archive path="/Java/jetty-6.1.11/lib/servlet-api-2.5-6.1.11.jar" source="/Java/jetty-6.1.11/modules/servlet-api-2.5/src/main/java"/>
+<archive path="/Java/jetty-6.1.11/lib/ext/jetty-ajp-6.1.11.jar"/>
+<archive path="/Java/jetty-6.1.11/lib/ext/jetty-client-6.1.11.jar"/>
+<archive path="/Java/jetty-6.1.11/lib/ext/jetty-html-6.1.11.jar"/>
+<archive path="/Java/jetty-6.1.11/lib/ext/jetty-java5-threadpool-6.1.11.jar"/>
+<archive path="/Java/jetty-6.1.11/lib/ext/jetty-servlet-tester-6.1.11.jar"/>
+<archive path="/Java/jetty-6.1.11/lib/ext/jetty-setuid-6.1.11.jar"/>
+<archive path="/Java/jetty-6.1.11/lib/ext/jetty-sslengine-6.1.11.jar"/>
 </library>
 <library name="Jetty6.1.4" systemlibrary="false">
 <archive path="/Java/jetty-6.1.4/lib/jetty-6.1.4.jar"/>
@@ -63,14 +78,14 @@
 <library name="JSon2.0" systemlibrary="false">
 <archive path="/Java/restlet-1.0rc4/lib/org.json_2.0/org.json.jar" source="/Java/restlet-1.0rc4/src/org.restlet.ext.json_2.0"/>
 </library>
+<library name="junit-addons-1.4" systemlibrary="false">
+<archive javadoc="file:/Java/junit-addons-1.4/api/" path="/Java/junit-addons-1.4/junit-addons-1.4.jar" source="/Java/junit-addons-1.4/src.jar"/>
+</library>
 <library name="JUnit3.8.1" systemlibrary="false">
 <archive javadoc="file:/Java/junit3.8.1/javadoc/" path="/Java/junit3.8.1/junit.jar" source="/Java/junit3.8.1/src.jar"/>
 </library>
 <library name="Junit4.3.1" systemlibrary="false">
 <archive javadoc="file:/Java/junit4.3.1/javadoc/" path="/Java/junit4.3.1/junit-4.3.1.jar" source="/Java/junit4.3.1/junit-4.3.1-src.jar"/>
-</library>
-<library name="junit-addons-1.4" systemlibrary="false">
-<archive javadoc="file:/Java/junit-addons-1.4/api/" path="/Java/junit-addons-1.4/junit-addons-1.4.jar" source="/Java/junit-addons-1.4/src.jar"/>
 </library>
 <library name="Jython" systemlibrary="false">
 <archive path="/Java/jython-2.1/1.5Compabable/jython.jar"/>
@@ -88,37 +103,10 @@
 <archive path="/Java/quartz-1.6.0/lib/core/commons-logging.jar"/>
 <archive path="/Java/quartz-1.6.0/lib/build/jta.jar"/>
 </library>
-<library name="Restlet 1.0b4" systemlibrary="false">
-<archive path="/Java/restlet-1.0rc4/lib/com.noelios.restlet.ext.httpclient_3.1.jar" source="/Java/restlet-1.0rc4/src/com.noelios.restlet.ext.httpclient_3.1"/>
-<archive path="/Java/restlet-1.0rc4/lib/com.noelios.restlet.ext.jdbc_3.0.jar" source="/Java/restlet-1.0rc4/src/com.noelios.restlet.ext.jdbc_3.0"/>
-<archive path="/Java/restlet-1.0rc4/lib/com.noelios.restlet.ext.asyncweb_0.8.jar" source="/Java/restlet-1.0rc4/src/com.noelios.restlet.ext.asyncweb_0.8"/>
-<archive path="/Java/restlet-1.0rc4/lib/com.noelios.restlet.jar" source="/Java/restlet-1.0rc4/src/com.noelios.restlet"/>
-<archive path="/Java/restlet-1.0rc4/lib/com.noelios.restlet.ext.servlet_2.4.jar" source="/Java/restlet-1.0rc4/src/com.noelios.restlet.ext.servlet_2.4"/>
-<archive path="/Java/restlet-1.0rc4/lib/com.noelios.restlet.ext.jetty_6.1.jar" source="/Java/restlet-1.0rc4/src/com.noelios.restlet.ext.jetty_6.1"/>
-<archive path="/Java/restlet-1.0rc4/lib/com.noelios.restlet.ext.net.jar" source="/Java/restlet-1.0rc4/src/com.noelios.restlet.ext.net"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.restlet.jar" source="/Java/restlet-1.0rc4/src/org.restlet"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.restlet.ext.velocity_1.4.jar" source="/Java/restlet-1.0rc4/src/org.restlet.ext.velocity_1.4"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.restlet.ext.freemarker_2.3.jar" source="/Java/restlet-1.0rc4/src/org.restlet.ext.freemarker_2.3"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.restlet.ext.fileupload_1.1.jar" source="/Java/restlet-1.0rc4/src/org.restlet.ext.fileupload_1.1"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.restlet.ext.spring_2.0.jar" source="/Java/restlet-1.0rc4/src/org.restlet.ext.spring_2.0"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.restlet.ext.json_2.0.jar" source="/Java/restlet-1.0rc4/src/org.restlet.ext.json_2.0"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.apache.commons.dbcp_1.2/org.apache.commons.dbcp.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.apache.commons.pool_1.3/org.apache.commons.pool.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/javax.mail_1.4/mail.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.safehaus.asyncweb_0.8/org.safehaus.asyncweb.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.apache.commons.logging_1.1/org.apache.commons.logging.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.apache.commons.codec_1.3/org.apache.commons.codec.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.apache.commons.httpclient_3.1/org.apache.commons.httpclient.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.apache.commons.fileupload_1.1/org.apache.commons.fileupload.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.apache.commons.collections_3.2/org.apache.commons.collections.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/javax.servlet_2.5/javax.servlet.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/javax.servlet_2.4/javax.servlet.jar"/>
-<archive path="/Java/restlet-1.0rc4/lib/org.freemarker_2.3/freemarker.jar"/>
-</library>
-<library name="RXTX2.1-7" systemlibrary="false">
-<archive path="/Java/rxtx-2.1-7r2/RXTXcomm.jar" source="/Java/rxtx-2.1-7r2/src"/>
+<library name="restlet1.0rc4" systemlibrary="false">
+<archive path="/Java/restlet-1.0rc4/lib/com.noelios.restlet.jar"/>
 </library>
 <library name="xmlunit1.0" systemlibrary="false">
-<archive javadoc="file:/Java/xmlunit/doc/" path="/Java/xmlunit/lib/xmlunit1.0.jar" source="/Java/xmlunit/src/java"/>
+<archive path="/Java/xmlunit/lib/xmlunit1.0.jar"/>
 </library>
 </eclipse-userlibraries>
