@@ -138,7 +138,7 @@ public class Serial extends BaseComms implements CommDevice
 							commsSend.setHandleEvents(false);
 							commsSend.notify();
 						}
-						commsSend = new CommsSend(commsGroup);
+						commsSend = new CommsSend(commsGroup,deviceName);
 						commsSend.setInterCommandInterval(interCommandInterval);
 						commsSend.setOs(os);
 						commsSend. start();
