@@ -1,4 +1,4 @@
-#Tue Jun 03 23:30:23 EST 2008
+#Sat Aug 30 15:32:28 EST 2008
 major_version=1.6b
-minor_version=85
+minor_version=86
 app_name=eLife
