@@ -1,4 +1,13 @@
+== 26/Aug/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b86.zip V1.6-b86]   [attachment:wiki:SoftwareReleases:eLife-1.6b86-libs.zip Libs-V1.6b86] ==
+
+''' General '''
+
+Release with correct manifest and libraries
+
+
 == 26/Aug/08 Released [attachment:wiki:SoftwareReleases:eLife-1.6b85.zip V1.6-b85]   [attachment:wiki:SoftwareReleases:eLife-1.6b85-libs.zip Libs-V1.6b85] ==
+
+''' Flash Client '''
 
 ''' Flash Client '''
 
